'GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.17.3

  - Fix the number of tests to skip in t/01connect.t when the $DBI_DSN
    environment variable lacks a database specification.
  - Fix the number of tests to skip in t/06bytea.t when running on a version
    of PostgreSQL lower than 9.0.

2.17.2 Released November 21, 2010 (subversion r14542)

  - Support dequoting of hex bytea format for 9.0.
    [Dagfinn Ilmari Mannsåker] (CPAN bug #60200).
  - Don't PQclear on execute() if there is an active async query
    [rweikusat at mssgmbh.com] (CPAN bug #58376)
  - Allow data_sources() to accept any case-variant of 'dbi:Pg' (CPAN bug #61574)
  - Fix failing test in t/04misc.t on Perl 5.12. [Eric Simon]
  - Fix for some 7.4 failing tests [Dagfinn Ilmari Mannsåker]
  - Return bare instead of undef in test connections (CPAN bug #61574)

2.17.1 Released April 8, 2010 (subversion r13899)

  - Only use lo_import_with_oid if Postgres libraries are 8.4 or better
    [GSM] (CPAN bug #56363)

2.17.0 Released April 6, 2010 (subversion r13890)

  - Do not automatically ROLLBACK on a failed pg_cancel [GSM] (CPAN bug #55188)
  - Added support for new lo_import_with_oid function.
    [GSM] (CPAN bug #53835)
  - Don't limit stored user name to \w in tests [GSM] (CPAN bug #54372)
  - Allow tests to support versions back to Postgres 7.4 [GSM]

2.16.1 Released January 20, 2010 (subversion r13756)

  - Output error messages in UTF-8 as needed. Reported by 
    Michael Hofmann. [GSM] (CPAN bug #53854)

2.16.0 Released December 17, 2009 (subversion r13672)

 - Put in a test for high-bit characters in bytea handling.
   [Bryce Nesbitt] (see also CPAN bug #39390)

 - Better SQLSTATE code on connection failure (CPAN bug #52863)
   [Chris Travers with help from Andrew Gierth]

 - Fixed POD escapes (CPAN bug #51856) [FWIE@cpan.org]

2.15.1 Released August 7, 2009 (subversion r13173)

  - Release to fix the SIGNATURE file. [GSM]

2.15.0 Released August 4, 2009 (subversion r13164)
